# etap-toy

./: README.md  ctx.c  meson.build  toy.py  update-translation.sh
data/: etap-toy.conf  resources.qrc  tr.org.etap.toy.desktop  tr.org.etap.toy.xml  uinput-etap.initd
debian/: changelog  control  copyright  postinst  rules
po/: POTFILES  etap-toy.pot  toy.pot  tr.po
src/: MainWindow.cpp  MainWindow.h  a.out  main.cpp  otp-auth.c  toy.h  uinput_client.c  uinput_service.c
src/toy/: RightClick.cpp  cotp.c  cotp.h  lock_screen.cpp  lock_screen.h  pam.c  right_click.cpp  right_click.h  settings.cpp  single_instance.c  toy_button.cpp  toy_button.h  uinput.c
tools/: mkctx.sh
toy/: DashWindow.py  MainWindow.py  main.py
